# millrace-editor

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MILLRACE_EDITOR.md  NOTICE  README.md  SECURITY.md  TERAX.md  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: millrace-runtime-bridge.md  rename-residuals.md
docs/provenance/: terax-import.md
src/: main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: mod.rs  net.rs  secrets.rs
src-tauri/src/modules/fs/: file.rs  grep.rs  mod.rs  mutate.rs  search.rs  tree.rs
src-tauri/src/modules/millrace/: commands.rs  fixtures.rs  mod.rs  runtime_bridge.rs  types.rs
src-tauri/src/modules/pty/: job.rs  mod.rs  session.rs  shell_init.rs
src-tauri/src/modules/pty/scripts/: bashrc.bash  init.fish  profile.ps1  zshrc.zsh
src-tauri/src/modules/shell/: background.rs  mod.rs  ringbuffer.rs  session.rs
src/app/: App.tsx
src/components/: WindowControls.tsx
src/components/ai-elements/: code-block.tsx  conversation.tsx  markdown-code.tsx  message.tsx  reasoning.tsx  snippet.tsx  tool.tsx
src/components/ui/: spinner.tsx
src/lib/: fonts.ts
src/modules/ai/: config.ts  index.ts
src/modules/editor/: AiDiffPane.tsx  AiDiffStack.tsx  EditorPane.tsx  EditorStack.tsx  NewEditorDialog.tsx  index.ts
src/modules/explorer/: ExplorerSearch.tsx  FileExplorer.tsx  FileTreeNode.tsx  InlineInput.tsx  index.ts
src/modules/header/: Header.tsx  SearchInline.tsx
src/modules/millrace/: index.ts
src/modules/preview/: PreviewAddressBar.tsx  PreviewPane.tsx  PreviewStack.tsx  index.ts
src/settings/: SettingsApp.tsx  main.tsx
src/styles/: globals.css  terminalTheme.ts  tokens.ts
(+87 files in other folders)
